18932
```scala
import scala.reflect.macros.whitebox._
import scala.language.experimental.macros

object Macros {
  def impl(c: Context)(x: c.Expr[Boolean]): c.Expr[Boolean] = x
  def foo(x: Boolean): Boolean = macro impl
}

object Test extends App {
  def expectUnit() {
    Macros.foo(true)
  }
}

19:47 ~/Projects/Scala2110M8/sandbox (HEAD)$ ss
Test.scala:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    Macros.foo(true)
               ^
Test.scala:3: error: type mismatch;
 found   : Unit
 required: Boolean
    Macros.foo(true)
               ^
one warning found
one error found
```
